<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F9FFFC">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F9FFFC">

        <!-- Section 1 -->
        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp"
            android:background="@drawable/bottom_rounded_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Titre -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titre_fat_percentage"

                android:textColor="#00695C"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginBottom="4dp" />

            <!-- Description -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_fat_percentage"
                android:textSize="14sp"
                android:textColor="#808080"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"/>

            <!-- genre -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <RadioGroup
                android:id="@+id/rgGender_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbMale_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/homme"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/rbFemale_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/femme"
                    android:layout_marginStart="16dp" />
            </RadioGroup>

            <!-- Âge -->
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/etAge_fragment"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/exemple_age"
                android:inputType="number"
                android:background="@drawable/input_background"
                android:padding="12dp" />

            <!-- Poids -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/etPoids_fragment"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/exemple_poids"
                android:inputType="numberDecimal"
                android:background="@drawable/input_background"
                android:padding="12dp" />

            <!-- Taille -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/etTaille_fragment"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/exemple_taille"
                android:inputType="numberDecimal"
                android:background="@drawable/input_background"
                android:padding="12dp" />

            <!-- Tour du cou -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/neck_circumference"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/etCou_fragment"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/exemple_Tour_de_cou"
                android:inputType="numberDecimal"
                android:background="@drawable/input_background"
                android:padding="12dp" />

            <!-- Tour de taille -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waist_circumference"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/etTailleCeinture_fragment"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/exemple_taille_ceinture"
                android:inputType="numberDecimal"
                android:background="@drawable/input_background"
                android:padding="12dp" />
            <!-- Tour des hanches (pour les femmes) -->
            <TextView
                android:id="@+id/tvHanche_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/hip_circumference"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/etHanche_fragment"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:visibility="gone"
                android:hint="@string/exemple_Tour_de_hanche"
                android:inputType="numberDecimal"
                android:background="@drawable/input_background"
                android:padding="12dp" />

            <!-- Bouton -->
            <Button
                android:id="@+id/btnCalculerGraisse_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate_fat_percentage"
                android:textColor="#FFFFFF"
                android:backgroundTint="#009688"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="24dp"
                android:padding="12dp" />

        </LinearLayout>

        <!-- Section 2 -->
        <LinearLayout
            android:id="@+id/lyPourcentage_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="30dp"
            android:background="@drawable/bg_card"
            app:layout_constraintTop_toBottomOf="@+id/ll1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Titre -->
            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fat_percentage_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


            <!-- Pourcentage -->
            <TextView
                android:id="@+id/percentageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percentage"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/titleText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="12dp"/>

            <!-- Type de graisse -->
            <TextView
                android:id="@+id/typeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:textColor="@color/blue"
                app:layout_constraintTop_toBottomOf="@id/percentageText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="4dp"/>

            <!-- Barre de progression -->
            <ProgressBar
                android:id="@+id/pv_fragment"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                style="?android:attr/progressBarStyleHorizontal"
                android:progress="0"
                android:max="40"
                android:progressDrawable="@drawable/progress_bar"
                app:layout_constraintTop_toBottomOf="@id/typeText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="12dp" />

            <!---->
            <!-- Échelle de la barre -->
            <LinearLayout
                android:id="@+id/scaleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/pv_fragment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="4dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/progress_scale_0" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:text="@string/progress_scale_40" />
            </LinearLayout>
            <!-- Description -->
            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/info_background"
                android:text="@string/description_fat_percentage_detail"
                android:textSize="14sp"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@id/scaleLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="12dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>